--- a/Oradellschools/index.html
+++ b/Oradellschools/index.html
@@ -47,7 +47,7 @@
 				<h2>Oradell Public School District</h2>
 			</section>
 			<section class="superintendent">
-				<img src="images/patrickfletcher.jpeg" alt="Patrick Fletcher" class="fletcher">
+				<img src="images/patrickfletcher.jpeg" alt="Patrick Fletcher">
 				<h1>Patrick Fletcher</h1>
 				<h2>Superintendent</h2>
 				<h2>River Dell Regional School District</h2>
