Parkways in New York

--- a/Parkways in New York/index.html
+++ b/Parkways in New York/index.html
@@ -7,7 +7,7 @@
 
 <body>
 	<div class="North-South">
-		<h1>Westchester Parkways"</h1>
+		<h1>Westchester Parkways</h1>
 		<section class="Westchester Parkways">
 			<h1>Saw Mill River Parkway</h1>
 			<a href="sawmillriverparkway.html" alt="Saw Mill River Parkway"><img src="images/Saw Mill Parkway sign.svg"></a>
@@ -22,10 +22,10 @@
 		</section>
 	</div>
 	<div class="East-West">
-		<h1>Westchester Parkways"</h1>
+		<h1>Westchester Parkways</h1>
 		<section class="Westchester Parkways">
 			<h1>Cross County Parkway</h1>
-			<a href="crosscountyparkway.html" alt="Cross County Parkway"><img src="crosscountypkwy.svg"></a>
+			<a href="crosscountyparkway.html" alt="Cross County Parkway"><img src="images/crosscountypkwy.svg"></a>
 		</section>
 		<section class="Westchester Parkways">
 			<h1>Bear Mountain Parkway</h1>
@@ -33,7 +33,7 @@
 		</section>
 	</div>
 	<div class="North-South">
-		<h1>Westchester and Bronx Parkways"</h1>
+		<h1>Westchester and Bronx Parkways</h1>
 		<section class="Westchester and Bronx Parkways">
 			<h1>Bronx River Parkway</h1>
 			<a href="bronxriverparkway.html" alt="Bronx River Parkway"><img src="images/bronxriverpkwy.svg"></a>
