Parkways in New York

--- a/Parkways in New York/index.html
+++ b/Parkways in New York/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<div class="North-South">
+	<div class="Westhester:North-South">
 		<h1>Westchester Parkways</h1>
 		<section class="Westchester Parkways">
 			<h1>Saw Mill River Parkway</h1>
@@ -32,7 +32,7 @@
 			<a href="bearmountainparkway.html" alt="Bear Mountain Parkway"><img src="images/bearmountainpkwy.png"></a>
 		</section>
 	</div>
-	<div class="North-South">
+	<div class="Westchester-Bronx">
 		<h1>Westchester and Bronx Parkways</h1>
 		<section class="Westchester and Bronx Parkways">
 			<h1>Bronx River Parkway</h1>
