Parkways in New York

--- a/Parkways in New York/index.html
+++ b/Parkways in New York/index.html
@@ -34,11 +34,11 @@
 	</div>
 	<div class="Westchester-Bronx">
 		<h1>Westchester and Bronx Parkways</h1>
-		<section class="Westchester and Bronx Parkways">
+		<section class="Westchester-BronxParkways">
 			<h1>Bronx River Parkway</h1>
 			<a href="bronxriverparkway.html" alt="Bronx River Parkway"><img src="images/bronxriverpkwy.svg"></a>
 		</section>
-		<section class="Westchester and Bronx Parkways">
+		<section class="Westchester-BronxParkways">
 			<h1>Hutchinson River Parkway</h1>
 			<a href="hutchinsonriverparkway.html" alt="Hutchinson River Parkway"><img src="images/hutchinsonriverpkwy.svg"></a>
 		</section>
