Parkways in New York

--- a/Parkways in New York/index.html
+++ b/Parkways in New York/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<div class="Westchester.North-South">
+	<div class="Westchester.North-SouthParkways">
 		<h1>Westchester Parkways</h1>
 		<section class="Westchester.North-South">
 			<h1>Saw Mill River Parkway</h1>
@@ -18,7 +18,7 @@
 		</section>
 		<section class="Westchester.North-South">
 			<h1>Taconic State Parkway</h1>
-			<a href="taconicstateparkway.html" alt="Taconic State Parkway"><img src="images/taconicpkwy.qdgds4.31_AM_qdgds4"></a>
+			<a href="taconicstateparkway.html" alt="Taconic State Parkway"><img src="images/TaconicStateParkway.png"></a>
 		</section>
 	</div>
 	<div class="East-West">
