Parkways in New York

--- a/Parkways in New York/index.html
+++ b/Parkways in New York/index.html
@@ -18,7 +18,7 @@
 		</section>
 		<section class="Westchester.North-South">
 			<h1>Taconic State Parkway</h1>
-			<a href="taconicstateparkway.html" alt="Taconic State Parkway"><img src="images/TaconicStateParkway.png"></a>
+			<a href="taconicstateparkway.html" alt="Taconic State Parkway"><img src="images/TaconicStateParkway.svg"></a>
 		</section>
 	</div>
 	<div class="East-West">
@@ -29,7 +29,7 @@
 		</section>
 		<section class="Westchester Parkways">
 			<h1>Bear Mountain Parkway</h1>
-			<a href="bearmountainparkway.html" alt="Bear Mountain Parkway"><img src="images/bearmountainpkwy.png"></a>
+			<a href="bearmountainparkway.html" alt="Bear Mountain Parkway"><img src="images/BearMountainParkway.png"></a>
 		</section>
 	</div>
 	<div class="Westchester-Bronx">
