Parkways in New York

--- a/Parkways in New York/index.html
+++ b/Parkways in New York/index.html
@@ -6,17 +6,17 @@
 </head>
 
 <body>
-	<div class="Westchester.North-SouthParkways">
+	<div class="Westchester.North-South">
 		<h1>Westchester Parkways</h1>
-		<section class="Westchester.North-South">
+		<section class="Westchester.North-SouthParkways">
 			<h1>Saw Mill River Parkway</h1>
 			<a href="sawmillriverparkway.html" alt="Saw Mill River Parkway"><img src="images/Saw Mill Parkway sign.svg"></a>
 		</section>
-		<section class="Westchester.North-South">
+		<section class="Westchester.North-SouthParkways">
 			<h1>Sprain Brook Parkway</h1>
 			<a href="sprainbrookparkway.html" alt="Sprain Brook Parkway"><img src="images/sprainbrookpkwy.svg"></a>
 		</section>
-		<section class="Westchester.North-South">
+		<section class="Westchester.North-SouthParkways">
 			<h1>Taconic State Parkway</h1>
 			<a href="taconicstateparkway.html" alt="Taconic State Parkway"><img src="images/TaconicStateParkway.svg"></a>
 		</section>
