--- a/Parkways in New York/index.html
+++ b/Parkways in New York/index.html
@@ -10,15 +10,15 @@
 		<h1>Westchester Parkways</h1>
 		<section class="Westchester.North-SouthParkways">
 			<h1>Saw Mill River Parkway</h1>
-			<a href="sawmillriverparkway.html" alt="Saw Mill River Parkway"><img src="images/Saw Mill Parkway sign.svg"></a>
+			<a href="sawmillriverparkway.html" alt="Saw Mill River Parkway"><img src="images/Saw Mill Parkway sign.svg" height="100" width="100"></a>
 		</section>
 		<section class="Westchester.North-SouthParkways">
 			<h1>Sprain Brook Parkway</h1>
-			<a href="sprainbrookparkway.html" alt="Sprain Brook Parkway"><img src="images/sprainbrookpkwy.svg"></a>
+			<a href="sprainbrookparkway.html" alt="Sprain Brook Parkway"><img src="images/sprainbrookpkwy.svg" height="100" width="100"></a>
 		</section>
 		<section class="Westchester.North-SouthParkways">
 			<h1>Taconic State Parkway</h1>
-			<a href="taconicstateparkway.html" alt="Taconic State Parkway"><img src="images/TaconicStateParkway.svg"></a>
+			<a href="taconicstateparkway.html" alt="Taconic State Parkway"><img src="images/TaconicStateParkway.svg" height="100" width="100"></a>
 		</section>
 	</div>
 	<div class="East-West">
