--- a/Parkways in New York/index.html
+++ b/Parkways in New York/index.html
@@ -25,11 +25,11 @@
 		<h1>Westchester Parkways</h1>
 		<section class="Westchester Parkways">
 			<h1>Cross County Parkway</h1>
-			<a href="crosscountyparkway.html" alt="Cross County Parkway"><img src="images/crosscountypkwy.svg"></a>
+			<a href="crosscountyparkway.html" alt="Cross County Parkway"><img src="images/crosscountypkwy.svg" height="140" width="140"></a>
 		</section>
 		<section class="Westchester Parkways">
 			<h1>Bear Mountain Parkway</h1>
-			<a href="bearmountainparkway.html" alt="Bear Mountain Parkway"><img src="images/BearMountainParkway.png"></a>
+			<a href="bearmountainparkway.html" alt="Bear Mountain Parkway"><img src="images/BearMountainParkway.png" height="140" width="140"></a>
 		</section>
 	</div>
 	<div class="Westchester-Bronx">
