--- a/Parkways in New York/index.html
+++ b/Parkways in New York/index.html
@@ -29,7 +29,7 @@
 		</section>
 		<section class="Westchester Parkways">
 			<h1>Bear Mountain Parkway</h1>
-			<a href="bearmountainparkway.html" alt="Bear Mountain Parkway"><img src="images/BearMountainParkway.png" height="160" width="160"></a>
+			<a href="bearmountainparkway.html" alt="Bear Mountain Parkway"><img src="images/BearMountainParkway.png"></a>
 		</section>
 	</div>
 	<div class="Westchester-Bronx">
