Parkways in New York

--- a/Parkways in New York/index.html
+++ b/Parkways in New York/index.html
@@ -25,7 +25,7 @@
 		<h1>Westchester Parkways</h1>
 		<section class="Westchester Parkways">
 			<h1>Cross County Parkway</h1>
-			<a href="crosscountyparkway.html" alt="Cross County Parkway"><img src="images/crosscountypkwy.svg" height="160" width="160"></a>
+			<a href="crosscountyparkway.html" alt="Cross County Parkway"><img src="images/crosscountypkwy.svg"></a>
 		</section>
 		<section class="Westchester Parkways">
 			<h1>Bear Mountain Parkway</h1>
