--- a/Parkways in New York/index.html
+++ b/Parkways in New York/index.html
@@ -18,7 +18,7 @@
 		</section>
 		<section class="Westchester.North-SouthParkways">
 			<h1>Taconic State Parkway</h1>
-			<a href="taconicstateparkway.html" alt="Taconic State Parkway"><img src="images/TaconicStateParkway.svg" height="160" width="160"></a>
+			<a href="taconicstateparkway.html" alt="Taconic State Parkway"><img src="images/TaconicStateParkway.svg"></a>
 		</section>
 	</div>
 	<div class="East-West">
