Parkways in New York

--- a/Parkways in New York/index.html
+++ b/Parkways in New York/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<div class="North-SouthParkways">
+	<div class="North-South">
 		<h1>Westchester Parkways</h1>
 		<section class="North-SouthParkways">
 			<h1>Saw Mill River Parkway</h1>
