--- a/Parkways in New York/index.html
+++ b/Parkways in New York/index.html
@@ -42,4 +42,17 @@
 			<h1>Hutchinson River Parkway</h1>
 			<a href="hutchinsonriverparkway.html" alt="Hutchinson River Parkway"><img src="images/hutchinsonriverpkwy.svg"></a>
 		</section>
+	<div class="Speedlimits">
+		<h1>Maximum Speed limits</h1>
+		<section class="Maximumspeedlimits">
+			<p>Saw Mill River Parkway, Sprain Brook Parkway, Hutchinson River Parkway, Taconic State Parkway, Bear Mountain Parkway</p>
+			<img src="images/StateSpeedLimit55.jpg">
+		</section>
+		<section class="Maximumspeedlimits">
+			<p>Cross County Parkway, Parkways in New York City, Bronx River Pakrway, Hutchinson River Parkway</p>
+			<img src="images/Speedlimit50.jpg">
+		</section>
+		<section class="Maximumspeedlimits">
+			<p>Bronx River Parkway</p>
+			<img src="images/Speedlimit45.svg">
 	</div>
