Parkways in New York

--- a/Parkways in New York/index.html
+++ b/Parkways in New York/index.html
@@ -45,14 +45,14 @@
 	<div class="Speedlimits">
 		<h1>Maximum Speed limits</h1>
 		<section class="Maximumspeedlimits">
-			<p>Saw Mill River Parkway, Sprain Brook Parkway, Hutchinson River Parkway, Taconic State Parkway, Bear Mountain Parkway</p>
+			<h2>Saw Mill River Parkway, Sprain Brook Parkway, Hutchinson River Parkway, Taconic State Parkway, Bear Mountain Parkway</h2>
 			<img src="images/NewYorkStateSpeedLimit55.jpg">
 		</section>
 		<section class="Maximumspeedlimits">
-			<p>Cross County Parkway, Parkways in New York City, Bronx River Pakrway, Hutchinson River Parkway</p>
+			<h2>Cross County Parkway, Parkways in New York City, Bronx River Pakrway, Hutchinson River Parkway</h2>
 			<img src="images/Speedlimit50.jpg">
 		</section>
 		<section class="Maximumspeedlimits">
-			<p>Bronx River Parkway</p>
+			<h2>Bronx River Parkway</h2>
 			<img src="images/Speedlimit45.svg">
 	</div>
